# ComfyUI-FunPack

./: CHANGELOG.md  README.md  __init__.py  conditioning.py  funpack.py  image_processing.py  model_management.py  pyproject.toml  requirements.txt  samplers.py
.github/workflows/: publish.yml
docs/: FunPackClipVisionOutputCombine.md  FunPackContinueVideo.md  FunPackGemmaEmbeddingRefiner.md  FunPackHybridEuler2SSampler.md  FunPackLoraWorkflow.md  FunPackLorebookEnhancer.md  FunPackPromptCombiner.md  FunPackPromptEnhancer.md  FunPackSaveRefinementLatent.md  FunPackStoryMemKeyframeExtractor.md  FunPackStoryMemLastFrameExtractor.md  FunPackStoryWriter.md  FunPackVideoRefiner.md  FunPackVideoStitch.md
example_workflows/: LTX23_FunPack_Node_Set_Example.json
web/: funpack_lora_weights.js
