# pyproject.toml
[project]
name = "funpack" # Unique identifier for your node. Immutable after creation.
description = "A set of nodes for experiments with video generation models, including Prompt Enhancer, Story Writer, Video Stitch, Creative Template, Lorebook Enhancer and many other nodes."
version = "1.3.3" # Custom Node version. Must be semantically versioned.
license = { text = "GNU GPL v3" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/aimfordeb/ComfyUI-FunPack"

[tool.comfy]
PublisherId = "aimfordeb" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-FunPack" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)
